--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,8 +35,8 @@ header:
     align: l
     show_logo: true
     show_language: false
-    show_day_night: true
-    show_search: true
+    show_day_night: false
+    show_search: false
     highlight_active_link: true
 
 footer:
