--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,6 +16,9 @@ main:
   - name: Contact
     url: '#contact'
     weight: 40
+  - name: CV
+    url: uploads/resume.pdf
+    weight: 50   
   # - name: Posts
   #   url: '#posts'
   #   weight: 20
@@ -34,6 +37,6 @@ main:
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
- - name: CV
-   url: uploads/resume.pdf
-   weight: 50
+#  - name: CV
+#    url: uploads/resume.pdf
+#    weight: 70
