--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,14 +14,17 @@ main:
     url: '#projects'
     weight: 30
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 40
+  - name: Hobbies
+    url: '#hobbies'
+    weight: 50
   - name: Contact
     url: '#contact'
-    weight: 50
+    weight: 60
   - name: CV
     url: uploads/resume.pdf
-    weight: 60   
+    weight: 70   
   # - name: Posts
   #   url: '#posts'
   #   weight: 20
