--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,11 +10,11 @@ main:
   - name: News
     url: '#posts'
     weight: 20  
-  - name: Projects
-    url: '#projects'
-    weight: 20
   - name: Publications
     url: '#publications'
+    weight: 20
+  - name: Literatures
+    url: '#literatures'
     weight: 30
   - name: Hobbies
     url: '#hobbies'
